--- a/env.example
+++ b/env.example
@@ -9,3 +9,9 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # Service role key (SERVER ONLY - never expose to client!)
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Cleanup cron secret (generate with: openssl rand -base64 32)
+CLEANUP_SECRET=your-cleanup-secret
+
+# Site URL (for internal API calls)
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
