feat(T2.10): Admin block/unblock endpoint
- POST /api/admin/block-card with token + block flag
- Protected by ADMIN_SECRET env var
- Logs blocked/unblocked events

--- a/env.example
+++ b/env.example
@@ -13,5 +13,8 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # Cleanup cron secret (generate with: openssl rand -base64 32)
 CLEANUP_SECRET=your-cleanup-secret
 
+# Admin API secret (for blocking cards)
+ADMIN_SECRET=your-admin-secret
+
 # Site URL (for internal API calls)
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
